fixed the alignment of the image within the div uding bard, removed the padding and margin

--- a/style.css
+++ b/style.css
@@ -105,10 +105,10 @@ button {
 .home-image {
   width: 50%;
   background-color: transparent;
-  /* background-color: #3882f6; */
-  justify-items: center;
-  align-items: center;
-  padding-right: 100px;
+  align-self: center;
+  margin: 0 auto;
+  display: block;
+  /*   padding-right: 100px; */
 }
 
 .home-image img {
@@ -117,7 +117,10 @@ button {
   border-radius: 20px;
   justify-items: center;
   align-items: center;
-  padding-left: 10px;
+  /* padding-left: 10px; */
+  /* vertical-align: middle; */
+  margin: 0 auto;
+  display: block;
 }
 
 /* about section */
